--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,7 @@ dependencies {
   implementation 'com.google.firebase:firebase-analytics'
   implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
   implementation("com.google.firebase:firebase-auth")
+  implementation("com.google.android.gms:play-services-auth:20.7.0")
 }
 
 android {
