--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,25 +10,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core:
-  firebase_auth:
-  cloud_firestore:
-  riverpod:
-  freezed_annotation:
-  agora_rtc_engine:
-  go_router:
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
+  riverpod: ^2.6.1
+  freezed_annotation: ^2.4.4
+  agora_rtc_engine: ^6.3.2
+  go_router: ^14.6.0
   flutter_riverpod: ^2.6.1
   json_annotation:
-
   cupertino_icons: ^1.0.8
+  uni_links3: ^0.5.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
-  freezed:
-  riverpod_generator:
-  json_serializable:
+  build_runner: ^2.4.13
+  freezed: ^2.5.7
+  riverpod_generator: ^2.6.2
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
