--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   json_annotation:
   cupertino_icons: ^1.0.8
   uni_links3: ^0.5.3
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
