--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,10 @@ dependencies:
 
   clipboard: ^0.1.3
 
+  # HTML
+  flutter_html: ^3.0.0-beta.2
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -140,6 +144,7 @@ dev_dependencies:
   # Json
   json_serializable: ^6.7.1
   freezed: ^2.5.2
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
